--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       title="Namastay App"
       src="https://dev.namastay.io/en//1091e9de488e4f319e35369710fb823ba2f1f0e06c67377d?spreedlyApiKey=D1a8Zma8lZfap6nZpUjPxp6OHBV"
       style="
-        display: none;
+        display: block;
         position: fixed;
         top: 0px;
         left: 0px;
@@ -21,8 +21,8 @@
         height: 100%;
         border: none;
         z-index: 2147483647;
-        visibility: hidden;
-        opacity: 0;
+        visibility: visible;
+        opacity: 1;
         transition: visibility 150ms linear 0s, opacity 150ms linear 0s;
       "
     ></iframe>
