--- a/index.html
+++ b/index.html
@@ -2,29 +2,239 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Test hotel</title>
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != 'dataLayer' ? '&l=' + l : '';
+        j.async = true;
+        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, 'script', 'dataLayer', 'GTM-M2NVLL7');
+    </script>
+    <!-- End Google Tag Manager -->
   </head>
   <body>
-    <iframe
-      allow="payment"
-      name="Namastay App"
-      title="Namastay App"
-      src="https://dev.namastay.io/en//1091e9de488e4f319e35369710fb823ba2f1f0e06c67377d?spreedlyApiKey=D1a8Zma8lZfap6nZpUjPxp6OHBV"
-      style="
-        display: block;
-        position: fixed;
-        top: 0px;
-        left: 0px;
-        width: 100%;
-        height: 100%;
-        border: none;
-        z-index: 2147483647;
-        visibility: visible;
-        opacity: 1;
-        transition: visibility 150ms linear 0s, opacity 150ms linear 0s;
-      "
-    ></iframe>
+    <header>
+      <h1>Namastay Hotel</h1>
+      <p>
+        Welcome to Namastay Hotel, a test hotel to try out Namastay's
+        implementation.
+      </p>
+    </header>
+    <main>
+      <button type="button" class="namastay-widget-button">Book now</button>
+
+      <!-- Uncomment this button to test how Wix button logic with the empty icon from 'apps\namastay-sdk\wix-icon.svg' works -->
+      <button type="button">
+        <div>
+          <span>Booking with Wix</span>
+          <span>
+            <div style="display: none">
+              <svg
+                data-bbox="0 0 1 1"
+                height="1"
+                width="1"
+                xmlns="http://www.w3.org/2000/svg"
+                data-type="shape"
+              >
+                <g>
+                  <path d="M1 0v1H0V0h1z" fill="none"></path>
+                  <path d="M1 0v1H0V0h1z" fill="none"></path>
+                  <path d="M1 0v1H0V0h1z" fill="none"></path>
+                </g>
+              </svg>
+            </div>
+          </span>
+        </div>
+      </button>
+
+      <a
+        href="https://be.synxis.com/?adult=1&arrive=2022-07-18&chain=21856&child=0&currency=EUR&depart=2022-07-19&hotel=64400&level=hotel&locale=en-US&rate=ADJOFF&rooms=1"
+        class="namastay-offer-button"
+        >Try an offer</a
+      >
+      <ul>
+        <li>s</li>
+        <li>c</li>
+        <li>r</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>o</li>
+        <li>l</li>
+        <li>l</li>
+        <li>:)</li>
+      </ul>
+    </main>
+
+    <script src="./index.js"></script>
+    <script>
+      const hotelParameters = {
+        apiKey: '1091e9de488e4f319e35369710fb823ba2f1f0e06c67377d', // SynXis Test Hotel
+        // apiKey: 'b5aa026d544b4929aefbecc6457d5dbamu3cwco5nmw8j3h9', // Royal Champagne
+        // apiKey: 'cc9b60c5a4894bbe99e73c33e7ac42d1f6155846cbc2cfca', // Grand Pigalle
+        // apiKey: '90dea74ea1a440aea126678401911001Ru3jirZyLQrjeqU7', // Le Vendome
+        // apiKey: '57870bbf071544548a37de94e32c3335npejzt7em9vepdls', // La Ramade
+        // apiKey: 'ad0e13a4fd124807a49f4d4aa958155526j9tb5g7vgyfr4a', // Lily of the Valley
+        // apiKey: '43172a67e16d4bb2bddbe8fc1506ee9ahmx218d51zol34ki', // Jiva Hill
+        // apiKey: '2a4bff17ccec404eb6bbff156686bca4cp3272n399a2vnff', // Ezia Hotel
+        // apiKey: '4f874be898b44b70b9f8f76c6fc7ea85a2s35e106c67377d', // D-EDGE Test Hotel
+        // apiKey: 'd1c771990ca5469d8749b24fedaf01c954r4irdb73pf9657', // HOY Paris Hotel
+        // apiKey: '4f874be898b44b70b9f8f76c6fc7ea86a2s35e106c67377d', // Eringer
+        specialOfferButtonsClass: 'namastay-offer-button',
+        spreedlyApiKey: 'D1a8Zma8lZfap6nZpUjPxp6OHBV',
+        useWixIconSelector: true, // Add this for sites that use Wix and our SDK, remove in any other case
+        widgetButtonsClass: 'namastay-widget-button',
+      };
+      initNamastay(hotelParameters);
+    </script>
   </body>
 </html>
